fix youtube link. Hide default posts. Delete old theme

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,7 @@ theme_settings:
 
   # Header and footer text
   header_text: >
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-     <p>Remove all header text in <code>_config.yml</code> to disable this feature.</p>
+     <h1>Welcome to VeryWellRounded</h1>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/verywellrounded">Type Theme</a>
@@ -42,7 +40,7 @@ theme_settings:
   tumblr:
   twitter:
   wordpress:
-  youtube: https://www.youtube.com/channel/UCKkDMyVvzcN1ywwctSp_hpw
+  youtube: UCKkDMyVvzcN1ywwctSp_hpw
 
   # Scripts
   google_analytics: # Tracking ID, e.g. "UA-000000-01"
