--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ theme_settings:
   youtube: UCKkDMyVvzcN1ywwctSp_hpw
 
   # Scripts
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: G-XMTVC17GFR
   disqus_shortname:
   katex: true # Enable if using math markup
   search: false # Enable the search feature
